--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }],
     "require": {
         "yiisoft/yii2": "*",
-        "bower-asset/gasparesganga-jquery-loading-overlay": "1.5.*"
+        "bower-asset/gasparesganga-jquery-loading-overlay": ^"1.5.*"
     },
     "autoload": {
         "psr-4": {
